--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -22,4 +22,5 @@ de:
   label_enable_customize: Aktiviere eigene Anpassungen
   label_disable_customize: Deaktiviere eigene Anpassungen
   label_default_messages: Standardbezeichnugen ansehen
-  
+  label_enable_per_project: Benutzerdefinierte Nachricht pro Projekt aktivieren
+  notice_low_performance: Wenn diese Option aktiviert ist, besteht das Risiko einer geringen Leistung.
