--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -24,3 +24,4 @@ ja:
   label_default_messages: デフォルトのメッセージを確認する
   label_enable_per_project: プロジェクトごとにカスタムメッセージを有効にする
   notice_low_performance: 有効にした場合、パフォーマンスが低下するリスクがあります。
+  label_customize_project_messages: プロジェクトのメッセージのカスタマイズ
