Add "Disabled by the administrator" message

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -25,3 +25,4 @@ de:
   label_enable_per_project: Benutzerdefinierte Nachricht pro Projekt aktivieren
   notice_low_performance: Wenn diese Option aktiviert ist, besteht das Risiko einer geringen Leistung.
   label_customize_project_messages: Anpassen von Projektnachrichten
+  notice_disabled_by_administrator: Wenn du einen Fehler machst, korrigiere ihn bitte.
